--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
+    <h1><a href="{% url 'list' %}"><img src=""</a></h1>
     {% block content %}
     {% endblock %}
 </body>
