--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,10 @@ body{
     background-repeat: no-repeat;
     color: #fff;
 }
+.blogLogo {
+    height: 100;
+    width: 100;
+}
 
 body *{
     font-family: Ubuntu;
