--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
-    <h1><a href="{% url 'list' %}"><img src=""</a></h1>
+    <h1><a href="{% url 'articles:list' %}"><img class="blogLogo" src="{% static 'blog_logo.png' %}"></a></h1>
     {% block content %}
     {% endblock %}
 </body>
