--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -3,5 +3,9 @@
 {% block content %}
 
 <h1>SIGNUP</h1>
+<form class="site-form" action="/accounts/signup" method="post" >
+    {{form}}
+    <input type="submit" value="SIGNUP">
+</form>
 
 {% endblock %}
