--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -6,7 +6,7 @@
 <form class="site-form" action="{% url 'accounts:signup' %}" method="post" >
     {% csrf_token %}
     {{form}}
-    <input type="submit" value="SIGNUP">
+    <input type="submit" value="Signup">
 </form>
 
 {% endblock %}
