--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -8,7 +8,19 @@
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
-    <h1><a href="{% url 'articles:list' %}"><img class="blogLogo" src="{% static 'blog_logo.png' %}" height="100" width="100"></a></h1>
+    <header class="wrapper">
+        <h1><a href="{% url 'articles:list' %}"><img class="blogLogo" src="{% static 'blog_logo.png' %}" height="100" width="100"></a></h1>
+    </header>
+    <nav>
+        <ul>
+            <li>
+                <form class="logout-link" action="{% url 'accounts:logout' %} " method='post'>
+                    {% csrf_token %}
+                    <button type="submit">Logout</button>
+                </form> 
+            </li>
+        </ul>
+    </nav>
     {% block content %}
     {% endblock %}
 </body>
