--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <h1>SIGNUP</h1>
-<form class="site-form" action="{% url 'accounts:login' %}" method="post" >
+<form class="site-form" action="{% url 'accounts:login' %}" method="post" enctype="multipart/form-data" >
     {% csrf_token %}
     {{form}}
     {% if request.GET.next %}
